--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ description = "An efficient, thread-safe arena allocator"
 version = "0.1.0"
 authors = ["Douglas Creager <dcreager@dcreager.net>"]
 edition = "2018"
+
+[dependencies]
+parking_lot = "0.11"
